<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/mind_map_pana"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/toShowRandomMessage"
            android:contentDescription="@string/image_tile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toShowRandomMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/message_button"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintBottom_toTopOf="@id/msgOption"/>

        <TextView
            android:id="@+id/msgOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_option"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toShowRandomMessage"
            app:layout_constraintBottom_toTopOf="@id/card_screen_main"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_screen_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white_smoke"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="@dimen/margin_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msgOption">

            <LinearLayout
                android:id="@+id/linearList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msgOption">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_title"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black_5A"
                    android:layout_marginTop="16dp"
                    android:hint="@string/message_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_gravity="center"
                        android:text="@string/save_button"
                        app:backgroundTint="@color/green"
                        app:cornerRadius="10dp"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/toShowMessagesSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/blue_link"
                        android:layout_marginTop="4dp"
                        android:paddingVertical="8dp"
                        android:paddingHorizontal="10dp"
                        android:layout_gravity="center"
                        android:text="@string/see_message"
                        app:cornerRadius="10dp"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>